# siad

./: .flake8  pyproject.toml
siad/: __init__.py
siad/clustering/: k_means.py
siad/time_series_smoothing/: __init__.py  trend_adjusted_exponential_smoothing.py
tests/: test_siad.py
