[tool.poetry]
name = "siad"
version = "0.1.0"
description = "Implementação de alguns algoritmos demonstrados no curso de Sistemas de Apoio à Decisão"
authors = ["Demetrius Panovitch <demetrius.mp789@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.3.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
